--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- Main Content -->
   <main class="container mx-auto px-4 py-6">
     <!-- Book Section -->
-    <div class="flex flex-col lg:flex-row gap-6 mb-8">
+    <div class="flex flex-col gap-6 mb-8">
       <!-- Book Image -->
       <div class="px-4">
         <img src="/src/book1.jpg" id="imageBook" class="w-full lg:w-1/2 rounded-2xl shadow hover:shadow-lg hover:scale-[1.03] duration-300">
