Update index.html add plausible

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://cdn.tailwindcss.com/3.4.1" onerror="if(confirm('اعادة تحميل الصفحة')) location.reload()"></script>
   <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js" onerror="if(confirm('اعادة تحميل الصفحة')) location.reload()"></script>  
   <script src="/src/main.js" defer onerror="if(confirm('اعادة تحميل الصفحة')) location.reload()"></script>
+  <script defer data-domain="digital-book-1.vercel.app" src="https://plausible.io/js/script.js"></script>
   <style>
     @font-face { font-family: "Lemonada"; src: url(/src/Lemonada-SemiBold.ttf); } 
     :is(html, body) { font-family: "Lemonada"; scroll-behavior: smooth; }
@@ -30,7 +31,7 @@
   <!-- Main Content -->
   <main class="container mx-auto px-4 py-6">
     <!-- Book Section -->
-    <div class="flex flex-col gap-6 mb-8">
+    <div class="flex flex-col justify-center gap-6 mb-8">
       <!-- Book Image -->
       <div class="px-4">
         <img src="/src/book1.jpg" id="imageBook" class="w-full lg:w-1/2 rounded-2xl shadow hover:shadow-lg hover:scale-[1.03] duration-300">
